Fixato problema di z-index del hamburger menu
In produzione è sorto un problema di Z-INDEX che interferiva con
i bottoni di sign up presenti nel sito facendoli apparire sopra il
il menu a comparsa.

--- a/styles/index.css
+++ b/styles/index.css
@@ -107,6 +107,7 @@
       right: -200px;
       background-color: #767676e9;
       transition: 1s;
+      z-index: 1;
     }
 
     header nav.mobile.show__mobile {
